<resources>
    <string name="app_name">s1030340</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="Decimal">十進制</string>
    <string name="Hexadecimal">16進制</string>
    <string name="clac"></string>
    <string name="binary">二進制</string>

</resources>
