<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.user.s1030340.firstActivity"
    tools:showIn="@layout/activity_first">

    <TextView
        android:text="@string/clac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_weight="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:textAlignment="viewEnd" />

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"
        android:id="@+id/btn9" />

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn7"
        android:layout_toRightOf="@+id/radioGroup2"
        android:layout_toEndOf="@+id/radioGroup2"
        android:id="@+id/btn4"
        tools:ignore="UnknownId" />

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn4"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:id="@+id/btn5" />

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn9"
        android:layout_toRightOf="@+id/btn5"
        android:layout_toEndOf="@+id/btn5"
        android:id="@+id/btn6" />

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:id="@+id/btn2" />

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn5"
        android:layout_toEndOf="@+id/btn5"
        android:id="@+id/btn3" />

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_toRightOf="@+id/radioGroup2"
        android:layout_toEndOf="@+id/radioGroup2"
        android:id="@+id/btn0"
        tools:ignore="UnknownId" />

    <Button
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn_dot"
        android:layout_toEndOf="@+id/btn_dot"
        android:id="@+id/btn_add" />

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sub"
        android:layout_below="@+id/btn_mul"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_toRightOf="@+id/radioGroup2"
        android:layout_toEndOf="@+id/radioGroup2"
        tools:ignore="UnknownId" />

    <Button
        android:text="@string/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dot"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_toRightOf="@+id/btn0"
        android:layout_toEndOf="@+id/btn0" />

    <Button
        android:text="@string/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_eq"
        android:layout_alignBaseline="@+id/btn_add"
        android:layout_alignBottom="@+id/btn_add"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn8"
        android:layout_above="@+id/btn5"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7" />

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn7"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/btn0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/Decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_weight="1"
            android:layout_alignBaseline="@+id/radioButton2"
            android:layout_alignBottom="@+id/radioButton2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:text="@string/binary"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/btn_add"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:text="@string/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_div"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_mul"
        android:layout_below="@+id/btn_div"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
